/* د اديانو د پرتله اييزې څېړنې څخه موخه څه ده؟ */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -33,7 +33,7 @@
 == د دين اصطلاحي مانا ==
 (دا د الله تعالى هغه ټاكل شوې او غوره شوې قانون، لار او د ژوند ذريقه ده چې  عقل او پوهې خاوندانو ته د محمد صلى الله عليه وسلم ورمخكې كړې د عمل كولو د لاېحې دعوت او ښوونه كوي، او پدې ډول د انسان (كه هغه ټولنيز وي كه څانګړې) د ژوند كولو لپاره د يو تل پاتې مشال په څېر دى.
 
-== '''د اديانو د پرتله اييزې څېړنې څخه موخه څه ده؟''' ==
+== د اديانو د پرتلنې څېړنې د کومې موخې لپاره ==
 د كوم شي ښۀ او بد مالومولو لپاره چې كله څړنه كېږي، نو لومړې بايد دا مالومه كړاى شسي چې هغه شې پخپله څرنګه دى؟ او بيا ددې خبرې مالومول چې دا شې د نورو شيانو څخه په كومه پوړۍ كې راځي؟ كله چې له دې دواړو خوو څخه كوم شې ښه په زبات ورسي، نو بيا هغه ته د خوښې سند وركول كېداى شي. همدا ډول د اديانو په پرتله اييزه څېړنه كې هم له دې ډول څېړنې څخه كار اخيستل كېږي.
 د اديانو له پرتله اييزې څېړنې څخه مخكې لومړې د هغوي د حېثيت په اړه څېړنه كېږي، چې دا مذهب يا دين په خپل ماهيت او اصليت كې څه شې دى؟ بيا نو ددې حيثيت څخه د هغه دين له نورو اديانو سره پرتله كېږي او هورې كتل كېږي چې له هغ بل دين سره ددې دين كوم حېثيت لري، ددې مذهب او  هغه مذهب ترمنځ د يووالي ټكي كوم دي، د خلاف ټكي كوم دي. هغه دين ددې دين په اړه څه وايي؟ لنډه دا چې د اديانو له پرتله اييزې څېړنې څخه موخه (د نړۍ د مذهبونو او اديانو بې طرفه څېړنه، پرتله او ددوي د لارښوونو پرتله، د دوي د ګروهو، لمانځنو، اصولو او رسومو بې طرفه او له تعصب څخه پرته څېړنه كول دي. ترڅو د هريو ښۀ او بد او د  هغوي قدر او قيمت د شېدو او اوبو په څېر يو له بله بېل شي، كه په كوم دين يا مذهب كې كوم ښه والې وي، نو د زړه له كومي د هغه منل او كه چېرې كومه خامي ولري نو په دلائلو سره يې رد كړي.
 لنډه دا چې د اديانو له پرتله اييزې څېړنې څخه موخه په نړۍ كې د ډول ډول اديانو او مدذهبونو د بنسټيزو ګروهو، لمنانځنواو رسم او رواج بې طرفه، بې تعصبه، عادلانه او ناقدانه څېړنه كول دي، چې ددې په پايله كې د هر دين او مذهب قدر اوقيمت، ښه والې او خاميانې په پوره ډول راښكاره كېږي، او د هغوي عيب او ښه والې يوه درجه ترلاسه كړي.
