/* د اديانو د پرتلې اصول: */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -38,8 +38,7 @@
 د اديانو له پرتله اييزې څېړنې څخه مخكې لومړې د هغوي د حېثيت په اړه څېړنه كېږي، چې دا مذهب يا دين په خپل ماهيت او اصليت كې څه شې دى؟ بيا نو ددې حيثيت څخه د هغه دين له نورو اديانو سره پرتله كېږي او هورې كتل كېږي چې له هغ بل دين سره ددې دين كوم حېثيت لري، ددې مذهب او  هغه مذهب ترمنځ د يووالي ټكي كوم دي، د خلاف ټكي كوم دي. هغه دين ددې دين په اړه څه وايي؟ لنډه دا چې د اديانو له پرتله اييزې څېړنې څخه موخه (د نړۍ د مذهبونو او اديانو بې طرفه څېړنه، پرتله او ددوي د لارښوونو پرتله، د دوي د ګروهو، لمانځنو، اصولو او رسومو بې طرفه او له تعصب څخه پرته څېړنه كول دي. ترڅو د هريو ښۀ او بد او د  هغوي قدر او قيمت د شېدو او اوبو په څېر يو له بله بېل شي، كه په كوم دين يا مذهب كې كوم ښه والې وي، نو د زړه له كومي د هغه منل او كه چېرې كومه خامي ولري نو په دلائلو سره يې رد كړي.
 لنډه دا چې د اديانو له پرتله اييزې څېړنې څخه موخه په نړۍ كې د ډول ډول اديانو او مدذهبونو د بنسټيزو ګروهو، لمنانځنواو رسم او رواج بې طرفه، بې تعصبه، عادلانه او ناقدانه څېړنه كول دي، چې ددې په پايله كې د هر دين او مذهب قدر اوقيمت، ښه والې او خاميانې په پوره ډول راښكاره كېږي، او د هغوي عيب او ښه والې يوه درجه ترلاسه كړي.
 
-== '''د اديانو د پرتلې اصول:''' ==
-د اديانو د پرتلې اصول:
+== د اديانو د پرتلې اصول ==
 د اديانو پرتله كول ډېر ګران كار دى. انسان چې د كومې ګروهې او لارې لاروې وي، نو د هغې ګروهې او لارې مخالفه ګروهه او لار سره ډېر كم انصاف كولاى شي. دا كمزوري په انساني طبيعيت كې ډېر ه عمه ده مګر په ځانګړي ډول دا خبره په مذدهبي ډلو ټلو كې په خورا زياته كچه ليدل كېږي. او په دوي كې يې د تعصب او تنګنظرۍ يو بل دول غوره كړې دى. د يو دين يا مذهب لاروې چې كله د بل دين يا مذهب په اړه څېړنه او پلټنه كوي، نو تل يې كوښښ وي چې هغه تياره ګوټونه يې راوسپړي، د روښانه اړخونو په لورې كله ورځي هم نه، او نه ورڅخه كله يادونه كوي، كه چېرې اسې روښانه او ښۀ اړهخ پر مخ ورشي،نو يا خو په ناپوهۍ او يا په پوره پوهې سره يې پټوي. له مذدهبي او ديني تنقيد څخه د ده موخه د حق پېژندل نه بلكه يواځ د هغې راى كومه چې ده مخكې له څېړنې څخه خپله كړې وي، سمه په زبات ورسوي. پدې ډول د اديانو د پرتلې ټولې ګټې په اوبو لاهو كېږي. او خپله هغه دين او مذهب ته هم كومه ګټه نه رسوي د كوم د تاييد لپاره چې دا لاروركوونكې طريقه او لار خپلوي. كه چېرې د پرتلې څخه مقصد او موخه د سمې سمونه او د هغې له سمون څخه نور هېڅ نه وي نو په رښتيا چې ددې موخې د تلاسه كولو لپاره دا كومه سمه لار نه ده، چې سړې له لومړي سر څخه د نوورو اديانو او مذهبونو په اړه يوه مخالفانه رايه خپله كړي. او د هغه څېړنه يواځې ددې لپاره وكړي چې د هغوي په ښو پرده واچوي، او د هغوي بد او نيمګړتياوې ولټوي، او لدې څخه د خپل دين او مذهب لوړالې څرګند كړي.
 له دې ډول دوكې او بدنيتۍ څخه به نه۸ چرې د كوم دين او مذهب لوړوالې په زبات ورسي، او نه به چېرې داسې برې د كوم حق دين لپاره د وياړ خبره وي، او نه به د حق او رېښتينولۍ له مخې داسې كوم مذدهب ته لوړالې په نصيب شي.
 كه چېرې كوم څوك په دوكې او چل سره د داسې مذهب او دين لاروې شي، نو داسې ګروهه او عقيده له سره سمه نده، او د منلو هم نده، ځكه چې دده بنسټ په چل او دوكې سره اېښودل شوې وي.
