--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -44,13 +44,11 @@
 كه چېرې كوم څوك په دوكې او چل سره د داسې مذهب او دين لاروې شي، نو داسې ګروهه او عقيده له سره سمه نده، او د منلو هم نده، ځكه چې دده بنسټ په چل او دوكې سره اېښودل شوې وي.
 لدې ناوړه افكارو او مفاسدو څخه د خوندي پاتې كېدو لپاره د اديانو پرتله اييزه څېړنه يوه سمې پاېلې ته د رسولو لپاره اړينه برېښي چې د پرتله اييزه څېړنې لپاره څو بنسټيزه خبرو ته پام وكړو، او په سختۍ سره يې پلي كړو، چې دا بنسټيزه ويناوې په لاندې ډول دي:
 
-== '''د اديانو د پرتلې اصول په لاندې ډول دي''' ==
+== د اديانو د پرتلې اصول په لاندې ډول دي ==
 د اديانو د پرتله اييزې څېړنې دا اصول په لاندې ډول دي
 # د يو مذهب يا دين د ښوونو صحيح زبات رسولو لپاره اړينه نده چې د بل دين يا مذدهب ټولې ښوونې له يوې مخې ناسمې وګڼل شي، او نه هم دا اړينه برېـښي چې په يوه مذدهب يا دين كې دې صداقت او رېښتينولي وي، نو بل دين دې ورڅخه چورلټ خالي وي. 
 حق يو ټولنيز حقيقت دى، او ددې حقيقت، او ددې حقيقت لاروې چې هر چېرې واوسي، نو د همغه ټولييز حقيقت لاروې به وي، د حال ا وځان په بدلون  سره د هغه هغه اصليب بدلون نه مومي. كوم رېښتيا او حقه خبره چې زموږ په دين او مذدهب كې موندل كېږي، د بل دين او مذهب د تاوان لپاره دليل نشي كېداى، او دا هم سمه نده چې دبل دين ښېګڼو باندې پرده واچول شي او سترګې پرې پټې شيو د يوې ښېګڼې په دوه دينونو كې شتون دا ښكاره كويو چې دا دواړه دينونه له يوه سرچينې څخه خړوبول شوي دي.
 نو حق چې چېرې هم وي،بايد وستاېل شي، او قدر يې وكړاى شي، او دا خبره به سمه نه وي، چې سړې خپل ټول توان پدې ولګوي چې دا حق او رېښتيا خبره اخوادېخوا راښكلو باندې بې قدره كولو كوښښ وكړو.
-
-
 # كوم كس چې دا دعوه وكړي چې حق ده له دين څخه پرته په بل دين او مذدهب كې نشته، نو دا سړې په نوورو اديانو نه بلكه په حق هم سترګې پټوي. ښكاره خبره دا ده چې حق او رېښتينولي په هر دين او مدذهب كې څه نا څه وي.
 نو د اديانو څېړونكي چې كله يو دين يا مذهب په بل دين يا مذهب لوړ او غوره ګڼي، نو ددې خبرې وجه دا وي، چې نوموړې  دين او مذدهب دده په وړاندې د رېښتونو تجلياتو، ښكاروندويه وي، نو لدې مخې د اديانو د پرتله اييزې څېړنې هېڅ يوه زده كوونكي ته نه ښايي چې مخكې له مخكې د خپلې خوښې دين په نورو اديانو غوره او كره دين وګڼي، او داسې و انګېري، چې نور ټول اديان له رېښتوني رڼا څخه تش دي. 
 د اديانو څېړونكې بايد پدې پوه شي، چې پدې اړه به حق او باطل دواړه په يو ځاى دده مخې ته ودرېږي. نو اوس په ده پورې اړه لري، چې حق خوښـوي يا باطل. 
