/* د اديانو د پرتلې اصول په لاندې ډول دي */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -46,14 +46,14 @@
 
 == د اديانو د پرتلې اصول په لاندې ډول دي ==
 د اديانو د پرتله اييزې څېړنې دا اصول په لاندې ډول دي
-# د يو مذهب يا دين د ښوونو صحيح زبات رسولو لپاره اړينه نده چې د بل دين يا مذدهب ټولې ښوونې له يوې مخې ناسمې وګڼل شي، او نه هم دا اړينه برېـښي چې په يوه مذدهب يا دين كې دې صداقت او رېښتينولي وي، نو بل دين دې ورڅخه چورلټ خالي وي. 
+* د يو مذهب يا دين د ښوونو صحيح زبات رسولو لپاره اړينه نده چې د بل دين يا مذدهب ټولې ښوونې له يوې مخې ناسمې وګڼل شي، او نه هم دا اړينه برېـښي چې په يوه مذدهب يا دين كې دې صداقت او رېښتينولي وي، نو بل دين دې ورڅخه چورلټ خالي وي. 
 حق يو ټولنيز حقيقت دى، او ددې حقيقت، او ددې حقيقت لاروې چې هر چېرې واوسي، نو د همغه ټولييز حقيقت لاروې به وي، د حال ا وځان په بدلون  سره د هغه هغه اصليب بدلون نه مومي. كوم رېښتيا او حقه خبره چې زموږ په دين او مذدهب كې موندل كېږي، د بل دين او مذهب د تاوان لپاره دليل نشي كېداى، او دا هم سمه نده چې دبل دين ښېګڼو باندې پرده واچول شي او سترګې پرې پټې شيو د يوې ښېګڼې په دوه دينونو كې شتون دا ښكاره كويو چې دا دواړه دينونه له يوه سرچينې څخه خړوبول شوي دي.
 نو حق چې چېرې هم وي،بايد وستاېل شي، او قدر يې وكړاى شي، او دا خبره به سمه نه وي، چې سړې خپل ټول توان پدې ولګوي چې دا حق او رېښتيا خبره اخوادېخوا راښكلو باندې بې قدره كولو كوښښ وكړو.
-# كوم كس چې دا دعوه وكړي چې حق ده له دين څخه پرته په بل دين او مذدهب كې نشته، نو دا سړې په نوورو اديانو نه بلكه په حق هم سترګې پټوي. ښكاره خبره دا ده چې حق او رېښتينولي په هر دين او مدذهب كې څه نا څه وي.
+* كوم كس چې دا دعوه وكړي چې حق ده له دين څخه پرته په بل دين او مذدهب كې نشته، نو دا سړې په نوورو اديانو نه بلكه په حق هم سترګې پټوي. ښكاره خبره دا ده چې حق او رېښتينولي په هر دين او مدذهب كې څه نا څه وي.
 نو د اديانو څېړونكي چې كله يو دين يا مذهب په بل دين يا مذهب لوړ او غوره ګڼي، نو ددې خبرې وجه دا وي، چې نوموړې  دين او مذدهب دده په وړاندې د رېښتونو تجلياتو، ښكاروندويه وي، نو لدې مخې د اديانو د پرتله اييزې څېړنې هېڅ يوه زده كوونكي ته نه ښايي چې مخكې له مخكې د خپلې خوښې دين په نورو اديانو غوره او كره دين وګڼي، او داسې و انګېري، چې نور ټول اديان له رېښتوني رڼا څخه تش دي. 
 د اديانو څېړونكې بايد پدې پوه شي، چې پدې اړه به حق او باطل دواړه په يو ځاى دده مخې ته ودرېږي. نو اوس په ده پورې اړه لري، چې حق خوښـوي يا باطل. 
 دا څېړونكي بايد د خپل عقل او پوهې او د تمييز د قوت په زور حق د حق په توګه او باطل د باطل په توګه وپېژني، او دواړه لهيوبل سره ګډ نكړي. 
-# په مذهبي څېړنه كې دې خبرې ته پام كول اړين دي، چې د يوه دين او مذهب له متعصبه مخالتينو او سرسخته سخت دريځه لارويانو د ليكنو له لوستو څخه ډډه وشي. په لومړنيو څېړنو كې هېڅ يو كس لدې ډول ليكنو څخه كومې پايلې ته نشي رسېداى، ځكه چې د څېړنې لاندې دين د اصلي څېړنې له ليدو څخه مخكې دده پر سترګو يو ډول ځانګړې عېنكې پرېوزي، چې ددې عينكو له وچجې دا ځېړونكې پدې نشي توانېداى چې د نوموړي دين اصلي څېره وويني.
+* په مذهبي څېړنه كې دې خبرې ته پام كول اړين دي، چې د يوه دين او مذهب له متعصبه مخالتينو او سرسخته سخت دريځه لارويانو د ليكنو له لوستو څخه ډډه وشي. په لومړنيو څېړنو كې هېڅ يو كس لدې ډول ليكنو څخه كومې پايلې ته نشي رسېداى، ځكه چې د څېړنې لاندې دين د اصلي څېړنې له ليدو څخه مخكې دده پر سترګو يو ډول ځانګړې عېنكې پرېوزي، چې ددې عينكو له وچجې دا ځېړونكې پدې نشي توانېداى چې د نوموړي دين اصلي څېره وويني.
 كه چېرې وغواړو چې دا څېړنه يوې مثبتې پايلې ته ورسوو، نو اړينه برېښـي چې يوه دين يا مذهب ته په هغه حيثيت وګورو چې خپله ځان راښكاره كوي، نه د هغو خلكو له نظره چې نوموړي دين يا مذهب ته په كومه سترګه ګوري. نو ددې لپاره د هر دين او مذهب د اصلي ماخذونو لوستل پكار دي، او لدې لارې فېصله وكړو چې دا دين څومره سم دى، او تر كوم بريده ناسم. نو كله چې يو څېړونكي خپله  رايه جوړه كړي، او بيا د نورو افكارو ليكنې وګوري، نو پدې كې به دومره څه ورانې نه وي. ځكه پدې وخت كې هغه حق او باطل ښه پېژندلې شي.
 
 == '''د نړيوالو اديانو د څېړنې لپاره قراني اصول''' ==
