/* د نړيوالو اديانو د څېړنې لپاره قراني اصول */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -56,7 +56,7 @@
 * په مذهبي څېړنه كې دې خبرې ته پام كول اړين دي، چې د يوه دين او مذهب له متعصبه مخالتينو او سرسخته سخت دريځه لارويانو د ليكنو له لوستو څخه ډډه وشي. په لومړنيو څېړنو كې هېڅ يو كس لدې ډول ليكنو څخه كومې پايلې ته نشي رسېداى، ځكه چې د څېړنې لاندې دين د اصلي څېړنې له ليدو څخه مخكې دده پر سترګو يو ډول ځانګړې عېنكې پرېوزي، چې ددې عينكو له وچجې دا ځېړونكې پدې نشي توانېداى چې د نوموړي دين اصلي څېره وويني.
 كه چېرې وغواړو چې دا څېړنه يوې مثبتې پايلې ته ورسوو، نو اړينه برېښـي چې يوه دين يا مذهب ته په هغه حيثيت وګورو چې خپله ځان راښكاره كوي، نه د هغو خلكو له نظره چې نوموړي دين يا مذهب ته په كومه سترګه ګوري. نو ددې لپاره د هر دين او مذهب د اصلي ماخذونو لوستل پكار دي، او لدې لارې فېصله وكړو چې دا دين څومره سم دى، او تر كوم بريده ناسم. نو كله چې يو څېړونكي خپله  رايه جوړه كړي، او بيا د نورو افكارو ليكنې وګوري، نو پدې كې به دومره څه ورانې نه وي. ځكه پدې وخت كې هغه حق او باطل ښه پېژندلې شي.
 
-== '''د نړيوالو اديانو د څېړنې لپاره قراني اصول''' ==
+== د اديانو د څېړنې لپاره قراني اصول ==
 
 == '''د اديانو پرتله اييزه څېړنه، ګټې او لاسته راوړنې''' ==
 
