/* د اديانو پرتله اييزه څېړنه، ګټې او لاسته راوړنې */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -58,7 +58,7 @@
 
 == د اديانو د څېړنې لپاره قراني اصول ==
 
-== '''د اديانو پرتله اييزه څېړنه، ګټې او لاسته راوړنې''' ==
+== د داسې څېړنې ګټې او لاسته راوړنې ==
 
 == '''د اديانو پرتله اييزه څېړنه كې د مسلمانو پوهانو ونډه''' ==
 
