/* د اديانو پرتله اييزه څېړنه كې د مسلمانو پوهانو ونډه */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -60,7 +60,7 @@
 
 == د داسې څېړنې ګټې او لاسته راوړنې ==
 
-== '''د اديانو پرتله اييزه څېړنه كې د مسلمانو پوهانو ونډه''' ==
+== په داسې څېړنو كې د مسلمانو پوهانو ونډه ==
 
 == '''د ځينو اديانو د ګروهو پرتله''' ==
 # د يووالي ګروهه
