/* د ځينو اديانو د ګروهو پرتله */

--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -62,17 +62,17 @@
 
 == په داسې څېړنو كې د مسلمانو پوهانو ونډه ==
 
-== '''د ځينو اديانو د ګروهو پرتله''' ==
+== د ځينو اديانو د ګروهو پرتله ==
 # د يووالي ګروهه
-##هندوييزم او د يووالوي آند
-## زردشت و د يووالي آند
-## كنفيوشيوس او د يووالي آند
-## يهوديت او د يووالي آند
-## عيسويت او د يووالي آند
-## اسلام او د يووالي آند
+# هندوييزم او د يووالوي آند
+# زردشت و د يووالي آند
+# كنفيوشيوس او د يووالي آند
+# يهوديت او د يووالي آند
+# عيسويت او د يووالي آند
+# اسلام او د يووالي آند
 # د څښتن په اړه د ځينو اديانو آند
-## هندوييزم او د څښتن آند
-## د څښتن په اړه د بوديزم ګروهه
+# هندوييزم او د څښتن آند
+# د څښتن په اړه د بوديزم ګروهه
 
 == '''اخځليکونه''' ==
 * '''مذاهب عالم، ليکوال اېس اېم شاهد'''
