--- a/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
+++ b/د_نړيوالو_اديانو_پرتله_اييزه_څېړنه.mw
@@ -74,5 +74,5 @@
 # هندوييزم او د څښتن آند
 # د څښتن په اړه د بوديزم ګروهه
 
-== '''اخځليکونه''' ==
-* '''مذاهب عالم، ليکوال اېس اېم شاهد'''
+== اخځليکونه ==
+* مذاهب عالم، ليکوال اېس اېم شاهد
