*Empty MediaWiki Message*

--- a/سنګاپور.mw
+++ b/سنګاپور.mw
@@ -1,4 +1,4 @@
-{{delete|completely in english, not a single word in Pashto}}
+{{ژباړل}}
 
 {{Infobox_Country|
 native_name =''{{lang|ms|Republik Singapura}}''<br />{{lang|zh|新加坡共和国}}<br />{{lang|ta|சிங்கப்பூர் குடியரசு}} |
