--- a/سیرالیون.mw
+++ b/سیرالیون.mw
@@ -1,4 +1,4 @@
-{{delete|one (!) word in pashto, everything else is completely in english}}
+{{ژباړل}}
 
 {{Infobox_Country
 |اصلي نوم = Republic of Sierra Leone
