*Empty MediaWiki Message*

--- a/شعر.mw
+++ b/شعر.mw
@@ -1,4 +1,4 @@
-{{delete|only some titles translated, the text is completely english}}
+{{ژباړل}}
 
 {{pp-semi-protected}}
 {{dablink|For the magazine, see [[Poetry (magazine)]].}}
