*Empty MediaWiki Message*

--- a/اسلام_کريموف.mw
+++ b/اسلام_کريموف.mw
@@ -1,4 +1,4 @@
-{{delete|completely in english, not a single word in pashto}}
+{{ژباړل}}
 
 [[Image:Karimov.jpg|thumb|Islam Karimov]]
 '''Islam Abduganievich Karimov''' (in modern [[Uzbek language|Uzbek]]:  '''Islom Karimov''', [[Russian language|Russian]]: Ислам Абдуганиевич Каримов) (born [[January 30]], [[1938]]) has been the President of [[Uzbekistan]] since [[1991]].
