--- a/روح_الله_خميني.mw
+++ b/روح_الله_خميني.mw
@@ -1,4 +1,4 @@
-{{delete|almost completely in english, also copyright issues (copypaste from en)}}
+{{ژباړل}}
 
 [[Image:Khomeini.jpg|framed|Ayatollah Khomeini founded the Islamic Republic of Iran]]
 
