--- a/اسپانيا.mw
+++ b/اسپانيا.mw
@@ -1,4 +1,4 @@
-{{delete|almost completely in english, also copyright issues (copypaste from en)}}
+{{ژباړل}}
 
 {{Infobox Country |
 اصلي نوم = Reino de España<br>Kingdom of Spain|
