*Empty MediaWiki Message*

--- a/زمبیا.mw
+++ b/زمبیا.mw
@@ -1,4 +1,4 @@
-{{ delete |The article is compeletly in English, not in Pashto}}
+{{ژباړل}}
 
 {{Infobox Country |
 اصلي نوم              = Republic of Zambia |
