*Empty MediaWiki Message*

--- a/يمن.mw
+++ b/يمن.mw
@@ -1,4 +1,4 @@
-{{ delete |The article is compeletly in English, not in Pashto}}
+{{ژباړل}}
 
 {{Infobox_Country|
 |native_name = الجمهورية اليمنية<br>''Al-Ǧumhūriyyah al-Yamaniyyah''
