--- a/مالاوي.mw
+++ b/مالاوي.mw
@@ -1,4 +1,4 @@
-{{delete|completely in english, not a single word in Pashto}}
+{{ژباړل}}
 
 {{Infobox Country |
 native_name              = ''Dziko la Malaŵi'' |
