*Empty MediaWiki Message*

--- a/لاووس.mw
+++ b/لاووس.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 {{Infobox_Country|
 اصلي نوم = ສາທາລະນະລັດປະຊາທິປະໄຕ ປະຊາຊົນລາວ<br/>''Sathalanalat Pasathipatai Pasason Lao'' |
 conventional_long_name = Lao People's Democratic Republic |
