*Empty MediaWiki Message*

--- a/هند.mw
+++ b/هند.mw
@@ -1,4 +1,4 @@
-{{Infobox Country|
+{{ژباړل}}{{Infobox Country|
 اصلي نوم = Republic of India <br />भारत गणराज्य<br /> Bh{{Unicode|ā}}rat Ga{{Unicode|ṇ}}ar{{Unicode|ā}}jya<!-- IF YOU CANNOT SEE THE 'N' UPGRADE YOUR BROWSER -->|
 عام نوم= India|the=|
 بېرغ= Flag of India.svg |
