--- a/پيسې.mw
+++ b/پيسې.mw
@@ -1,4 +1,4 @@
-{{otheruses}}
+{{ژباړل}}
 {{Template:Numismatics}}
 [[Economics]] offers various definitions for '''money''', though it is now commonly defined by the functions attached to any good or token that functions in [[trade]] as a [[medium of exchange]], [[store of value]], and [[unit of account]].  Some authors explicitly require money to be a [[standard of deferred payment]], too [http://www.amosweb.com/cgi-bin/awb_nav.pl?s=wpd&c=dsp&k=standard%20of%20deferred%20payment].  In common usage, money refers more specifically to  [[currency]], particularly the many [[list of circulating currencies|circulating currencies]] with [[legal tender]] status conferred by a [[nation]]al state;  [[deposit account]]s denominated in such currencies are also considered part of the [[money supply]], although these characteristics are historically comparatively recent.  Money may also serve as a means of rationing access to scarce resources and as a quantitative measure that provides a common standard for the comparison and valuation of quality as well as quantity, such as in the valuation of real estate or artistic works.
 
