/* د طنز يوه بېلګه */

--- a/محمود_نظري.mw
+++ b/محمود_نظري.mw
@@ -74,3 +74,9 @@ _ نه،نه
 _ هغه داسي سړی دی که چيري زه له ځايه پورته شم هغه سمدﻻسه زما پر ځای کښيني او ورو يې زياته کړه:
 
 ځکه هغه د دې څوکۍ خوند لېدلی دی .
+
+
+
+[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:افغانان]]
