*Empty MediaWiki Message*

--- a/ایتوپیا.mw
+++ b/ایتوپیا.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 {{Infobox_Country|
 |اصلي نوم = የኢትዮጵያ ፌዴራላዊ<br>ዲሞክራሲያዊ ሪፐብሊ<br>ye-Ityopp'ya Federalawi Dimokrasiyawi Ripeblik<br>Federal Democratic Republic of Ethiopia
 |عام نوم = Ethiopia
