--- a/چكنور_ملا_صېب.mw
+++ b/چكنور_ملا_صېب.mw
@@ -68,3 +68,8 @@
 === اخځليك ===
 
 ** نوميالې غاړي (چكنور ملا صاحب رحمه الله عليه)، ليكوال او سمون: ميراجان سيال مومند، كال ۱۳۷۷ل، پېښور پښتونخوا.
+
+
+[[وېشنيزه:د افغانستان نوميالي]]
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:افغانان]]
