*Empty MediaWiki Message*

--- a/سوازیلانډ.mw
+++ b/سوازیلانډ.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 {{dablink|Not to be confused with [[Switzerland|'''Sw'''(it)'''z'''(er)'''land''']] or [[Sweden]].}}
 {{Infobox_Country
 |native_name = Umbuso weSwatini''<br>Kingdom of Swaziland
