--- a/بریتانیا.mw
+++ b/بریتانیا.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 :''For other meanings of the terms "United Kingdom" and "UK”, see [[United Kingdom (disambiguation)]] and [[UK (disambiguation)]]. For an explanation of these and terms such as [[Great Britain]], [[British]], [[England]], [[Scotland]], [[Wales]] and [[Northern Ireland]], see [[British Isles (terminology)]].''
 {{Infobox_Country|
 
