*Empty MediaWiki Message*

--- a/سردار_علي_ټکر.mw
+++ b/سردار_علي_ټکر.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 [[Image:Sardar Ali Takkar.jpg|left|thumb|300px| سردار علي ټكر]]
 '''سردار علي ټكر''' د كوزې پښتونخوا يو تكړه سندرغاړې دى، چې دده كوډګر غږ په لر او بر څه چې په ټوله نړۍ كې ډېر زيات مېنان لري.
 
