*Empty MediaWiki Message*

--- a/ملګري_ملتونه.mw
+++ b/ملګري_ملتونه.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 {{redirect2|UN|U.N.|Un}}
 {{United Nations table}}
 The '''United Nations''' ('''UN''') is an [[international organization]] that describes itself as a "global association of governments facilitating cooperation in [[international law]], [[international security]], [[economic development]], and social equity." It was founded in 1945 by 51 states, replacing [[The League of Nations]]. As of 2005 it consists of 191 [[United Nations member states|member states]], including virtually all internationally recognized independent [[List of countries|nations]],  except [[Vatican City]] (the [[Holy See]]) (which has declined membership but is an observer state), [[Palestine]] (whose status is still one of a de facto state, and has not yet legal declared statehood), [[Niue]] (whose foreign affairs are dealt with by the [[New Zealand]] Government) and the [[Republic of China]] (whose membership was superseded by the [[People's Republic of China]] in 1971). Palestine and the Holy See both have Permanent Observer Missions to the UN. From its headquarters in [[New York City]], the UN's member countries and specialized agencies give guidance and decide on substantive and administrative issues in regular meetings held throughout each year.
