*Empty MediaWiki Message*

--- a/لتا_منگېشکر.mw
+++ b/لتا_منگېشکر.mw
@@ -1,4 +1,4 @@
-{{دسندرغاړومالوماتبکس
+{{ژباړل}}{{دسندرغاړومالوماتبکس
 | نوم       = لتا منګېشکر
 | انځور      = Lataalbum.jpg
 | د زېږون نېټه  = [[September 28]], [[1929]]
