--- a/ابو_الکلام_آزاد.mw
+++ b/ابو_الکلام_آزاد.mw
@@ -31,7 +31,8 @@
 
 
 
-[[category:فلسفه]]
+[[وېشنيزه:فلسفه]]
+[[وېشنيزه:پښتانه]]
 
 [[ar:أبو الكلام آزاد]]
 [[bn:আবুল কালাম মহিউদ্দিন আহমেদ (মাওলানা আজাদ)]]
