*Empty MediaWiki Message*

--- a/مسيحيت.mw
+++ b/مسيحيت.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 [[Image:Christianity percentage by country.png|thumb|left|350px|Christianity percentage by country, purple is highest, orange is lowest]]
 
 برطانوى دائرة المعارف ( Encyclopeadia Britannica) دمسيحيت تعريف پدىډول كړي دى:
