*Empty MediaWiki Message*

--- a/ساباوري.mw
+++ b/ساباوري.mw
@@ -1,4 +1,4 @@
-{{delete|not in pashto}}
+{{ژباړل}}
 
 {{Portal|Spirituality}}
 '''Animism''' is a belief system that does not accept the separation of body and soul, of spirit from matter. As such it is based upon the belief that personalized souls are found in animals, plants and other material objects, governing, to some degree, their existence.<ref name="Columbia">[http://www.bartleby.com/65/an/animism.html The Columbia Encyclopedia, Sixth Edition.  2001-05.]</ref> 
