--- a/ویدانتا.mw
+++ b/ویدانتا.mw
@@ -1,4 +1,4 @@
-{{delete|not in pashto}}
+{{ژباړل}}
 
 {{Hindu philosophy}}
 '''Vedanta''' ('''Vedānta''', {{lang|sa|वेदान्त}} ''{{IAST|vedānta}}''), a [[tatpurusha]] compound of ''veda'' "knowledge" and  ''anta'' "end, conclusion", translating to "the culmination of the ''[[Vedas]]''". It is a principal branch of [[Hindu philosophy]]. 
