--- a/بنګله_دیش.mw
+++ b/بنګله_دیش.mw
@@ -1,4 +1,4 @@
-{{Infobox Country|
+{{ژباړل}}{{Infobox Country|
 اصلي نوم      = د خلکو جمهوري بنګله دېش <br />গনপ্রজাতন্ত্রী বাংলাদেশ<br />Gôno Projatontri Bangladesh |
 عام نوم       = Bangladesh |
 بېرغ          = Flag of Bangladesh.svg |
