*Empty MediaWiki Message*

--- a/تريخی.mw
+++ b/تريخی.mw
@@ -1,4 +1,4 @@
-{{د اناتومي مالوماتبکس|
+{{ژباړل}}{{د اناتومي مالوماتبکس|
   نوم=تريخی <br>Gallbladder  |
   لاطين= vesica biliaris |
   GraySubject  = 250 |
