/* ادبي ژوند او د ځوی روزنه */

--- a/نازو_توخۍ.mw
+++ b/نازو_توخۍ.mw
@@ -17,17 +17,12 @@
 == ادبي ژوند او د ځوی روزنه ==
 نازو اناد پښتو ادبياتو يوه تکړه او نازک خياله شاعره او د لوړ مقام څښتنه مېرمن وه ، چې ورته د انا لقب ورکړ  شوی دی. او د پښتنو د ملي قاعد ميرويس نيکه مور ده. دې مېرمنې نه يوازې دا چې افغاني ټولنې ته د ميرويس نيکه په شان عښتلی او مدبره زوی وروزه (تربيه ېې کړ) بلکې د خپل عصر يوه مېړنۍ ښځه هم وه چې په پوهه  ، متانت او مېلمه پالنه کې ېې لوی مقام لرلی ، هو ! دا واقعيت دی چې ميرويس نيکه د خپلې پوهې او اديبې مور د پوره پاملرنې او عالي روزنې په منښتې (نتيجې) کې د قوم او ملت د مشر ، د ملي او خپلواک دولت د بنسټ ايښودونکي ، نيکه او د يوه مدبر سياستمدار او پوهاند لوړو پوړونو ته ورسېد. او د هغه د شخصيت په ټاکلو کې ېې خپله مورنۍ او هېوادنۍ  وجيبه تر سره کړې ده.  نازوانا د ميرويس په ذهن او افکارو کې له قوم او وطن سره مينه د عالي اخلاقو ، د پوهې او پوهنو د زده کړې روحيه وروزله. لکه چې پدې لکه محمد هوتک ليکي (حاجي مير ويس نيکه چې وزږېد ، مور ېې (نازوانا ) په ديانت او عبادت سره لوی کړ او د دين ټول فرايض ېې په اووم کال وروښودل. هر وخت به ېې ميرويس نيکه ته نصيحت کاوه چې د بېټ نيکه په قول د تا په مخ کې لوی کارونه دي ، چې لوی شې د خدای عبادت او د خلکو خدمت کړه تر څو ستا د خدمت په اثر خلک ارام وکا)  واي چې ميرويس د خپلې مور دا وصيت پاو خبره تل يادوله تر هغه چې پر 1119 هجري کال ېې خپل قوم د صفويانو له ظلمه وژغوره او په کندهار کې ېې د ملي او مستقل حکومت بنسټ کېښود، نو ېې سجده د شکر وکړه او وې وېل !، خدايه دا هغه کار و چې ماته مور راسپارلی او وصيت ېې کړی و، دا خو ستاد عبادو او بندګانو خدمت و چې ما ترسره کا.
 لنډه دا چې نازو انا لا په کوچنيوالي کې له پښتنو مېرمنو او سپين روبو پوهانو څخه لوست کړی و او مېړهمخې ارتينه وه چې نارينه ېې مېړانې ، زړورتيا او سخاوت ته حيران وو، برسېره پر زړورتيا ، ورين تندي او عبادت هسې مېرمن وه چې په مناجات ېې ډېرې رشې (اشعار) وېل. او يو ديوان ېې درلود چې دوه زره بيتونه پکې راغونډ و. او په داسې ښکليو او ښو وييکو (الفاظو) سره ېې ادا کړي او ويېلي وو چې نارينه مشاعرو نشو ادا او ويېلی.، خو له بده مرغه چې ددې د رشو (اشعارو)ديوان  تر اوسه هم مورخينو او څېړونکو ته پلاس نه دی ورغلی و يوازې يوه رباعي ېې پټې خزانې په خپلو پاڼو کې تر مونږه رارسولې ده. 
-دا رباعي ېې داسې ده ..
-
+دا رباعي ېې داسې ده.
 <center>
-ســحــرګـه وه د نـرګـس لـېمـه لانــده
-
-څاڅکي څاخکي ېې له سترګو څڅېده
-
-ماويېل څه دي ښکلي ګله ولې ژاړې؟
-
-ده وېل ژوند مې دی يوه خوله خندېـده 
-</center>
+{{شعر}}
+{{ب|ســحــرګـه وه د نـرګـس لـېمـه لانــده|څاڅکي څاخکي ېې له سترګو څڅېده}}
+{{ب|ماويېل څه دي ښکلي ګله ولې ژاړې؟|ده وېل ژوند مې دی يوه خوله خندېـده }}
+{{د شعر پای}}</center>
 
 == د نازو انا خوب ==
 د نازو انا د خولې نه روايت دی چې په کومه شپه چې [[ميرويس نيکه]] پېدا کېده نو نازو انا [[بېټ نيکه]] په خوب وليده چې نازو انا ته يې وييل چې د خپل د نوي ماشوم پالنه او روزنه په ښه توګه وکړي دا ځکه چې کله هغه ستر شي نو هېواد به د هغه په لاسونو د برکت خاوند شي. نازو انا به هر وخت د خپل د خوب کيسه خپل ځوی ميرويس نيکه ته کوله او نصيحت به يې ورته کاوه چې خپل اعمال د پوره ديانت او ايماندارۍ سره ترسره کړي. او په همدې توګه ځوان ميرويس خان تر خپلې مړينې تر مهاله د مور په نصيحت او مشوره کار کاوه او د [[افغانستان]] يو تکړه لارښود او پاچا شو.
