--- a/متواتر_حديث.mw
+++ b/متواتر_حديث.mw
@@ -43,9 +43,9 @@
 **ب - متوامترمعنوي :
 هغه روايت دی چي معنی يې متواتره وي خوالفاظ يې متواترنه وي . مثلاًپه دعاکي د لاس پورته کولواحادیث ،له نبي کريم r څخه په دې اړه نژدې سل احاديث نقل شوي اوپه هريوه کي همدامضمون دی چي رسول اکرم rپه دعاکي لاس پورته کول خو کيفيات  اواحوال يې مختلف دي اوپه هغوکي يو کيفيت اوحالت هم متواترنه دی . بياهم دهغو قدرمشترک (په دعا کي لاس پورته کول) دټولوسندونوپه اعتبارپه تواتر ثابت دی . 
 
-==۵ -  دمتواترواحاديثوشتون : ==
+==۵ -  دمتواترواحاديثو شتون  ==
 
-داحاديثوپه کتابونوکي يوشمېرمتواتراحاديث شته . مثلاًدحوض کوثرحديث،پرموزودمسح کولواحاديث او نور. خومتواتراحاديث داحادوپه پرتله ډېرکم دي . 
+داحاديثوپه کتابونوکي يوشمېرمتواتراحاديث شته . مثلاًدحوض کوثرحديث،پرموزودمسح کولواحاديث او نور. خومتواتراحاديث داحادوپه پرتله ډېرکم دي .
 
 ==۶  - په دې اړه مشهورې ليکنې : ==
 
