/* ۶  - په دې اړه مشهورې ليکنې : */

--- a/متواتر_حديث.mw
+++ b/متواتر_حديث.mw
@@ -47,7 +47,7 @@
 
 داحاديثوپه کتابونوکي يوشمېرمتواتراحاديث شته . مثلاًدحوض کوثرحديث،پرموزودمسح کولواحاديث او نور. خومتواتراحاديث داحادوپه پرتله ډېرکم دي .
 
-==۶  - په دې اړه مشهورې ليکنې : ==
+==۶  - په دې اړه مشهورې ليکنې ==
 
 دامت علماؤدمتواترواحاديثوجمع کولوته هم ځانګړې پاملرنه کړې ده اوهغوته يې دمستقلوليکلوبڼه ورکړې ده ترڅودعلم ترلاسه کؤنکي په اسانۍ سره وکولای شي متواتر احاديث ترلاسه کړي دځينونومونه يې دادي : 
 
