*Empty MediaWiki Message*

--- a/پاناما.mw
+++ b/پاناما.mw
@@ -1,4 +1,4 @@
-{{Infobox_Country         
+{{ژباړل}}{{Infobox_Country         
 |اصلي نوم = ''República de Panamá''
 |conventional_long_name = Republic of Panama 
 |عام نوم = Panama
