--- a/برونای.mw
+++ b/برونای.mw
@@ -1,4 +1,4 @@
-{{Infobox_Country
+{{ژباړل}}{{Infobox_Country
 |اصلي نوم = ''برني دارالسلام<br>Negara Brunei Darussalam''
 |عام نوم = Brunei
 |بېرغ = Flag of Brunei.svg
