*Empty MediaWiki Message*

--- a/مسکو.mw
+++ b/مسکو.mw
@@ -1,4 +1,4 @@
-{{otheruses}}{{City in Russia|official_name = Москва<br>Moscow
+{{ژباړل}}{{otheruses}}{{City in Russia|official_name = Москва<br>Moscow
 |nickname=
 |image_skyline = 
 |imagesize = 
