*Empty MediaWiki Message*

--- a/ببرک_کارمل.mw
+++ b/ببرک_کارمل.mw
@@ -1,4 +1,5 @@
-{{ژباړل}}{| align="left" cellpadding="2" cellspacing="0" style="border: 1px solid; margin-left: 1em"
+{{ژباړل}}
+{| align="left" cellpadding="2" cellspacing="0" style="border: 1px solid; margin-left: 1em"
 |+ '''ببرک کارمل''' 
 ! bgcolor="#efefef" colspan="3" |[[انځور:Karmal.PNG|Babrak Karmal]]
 |-
