*Empty MediaWiki Message*

--- a/سرشمېرنه.mw
+++ b/سرشمېرنه.mw
@@ -1,4 +1,4 @@
-[[Image:1870 census Lindauer Weber 01.gif|thumb|1870 US Census for New York City]]
+{{ژباړل}}[[Image:1870 census Lindauer Weber 01.gif|thumb|1870 US Census for New York City]]
 A '''census''' is the process of obtaining information about every member of a [[population]] (not necessarily a [[human]] population). The term is mostly used in connection with national 'Population and housing censuses' (to be taken every 10 years according to [[United Nations]] recommendations); Agriculture censuses (all agriculture units) and Business censuses (all enterprises). 
 
 The census can be contrasted with [[sampling (statistics)|sampling]] in which information is only obtained from a subset of a population. As such it is a method used for accumulating [[statistics|statistical]] data, and it is also vital to [[democracy]] ([[voting]]).  Census data is also commonly used for research, business [[marketing]], and planning purposes.
