--- a/د_امریکا_متحده_آیالاتونه.mw
+++ b/د_امریکا_متحده_آیالاتونه.mw
@@ -1,4 +1,4 @@
-{{delete|almost completely in english, also copyright issues (copypaste from en)}}
+{{ژباړل}}
 
 {{Infobox Country <!-- START INFOBOX --> 
 |اصلي نوم = United States of America
