*Empty MediaWiki Message*

--- a/ډي_آکسي_رايبونيوکليک_اسيد.mw
+++ b/ډي_آکسي_رايبونيوکليک_اسيد.mw
@@ -1,4 +1,4 @@
-{{delete|text not in pashto}}
+{{ژباړل}}
 
 {{sprotect2}}
 [[Image:3DScience DNA structure labeled Angstroms.jpg|thumb|220px|The structure of part of a DNA double helix.]]
