--- a/هوگو_چاوز.mw
+++ b/هوگو_چاوز.mw
@@ -1,4 +1,4 @@
-{{delete|one (!) word translated, everything else is english}}
+{{ژباړل}}
 
 {{Venezuelan presidents infobox 
  | name           = Hugo Rafael Chávez Frías
