*Empty MediaWiki Message*

--- a/واټيکان_ښار.mw
+++ b/واټيکان_ښار.mw
@@ -1,4 +1,4 @@
-{{delete|only one heading translated, the text is completely in english}}
+{{ژباړل}}
 
 <!-- Infobox Country -->{{Vatican Infobox <!-- Different Template, but modeled after Template:Infobox Country -->
 | native_name = ''Status Civitatis Vaticanae&nbsp;'''''<small>(Latin)</small><br>'''''Stato della Città del Vaticano&nbsp;'''''<small>(Italian)</small><br>'''State of the Vatican City''
