*Empty MediaWiki Message*

--- a/گلايکوليسېز.mw
+++ b/گلايکوليسېز.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 :''دا هم وګورۍ: [[ګلوکونيوجنېسېز]], which carries out a process wherein glucose is synthesized rather than catabolized.''
 '''ګلايکوليسېز''' د ګڼ شمېر تعاملونو د لړۍ نوم دی چې ګلوکوز په پايروېټ بدلوي او ورسره يو مقدار اډينوسين ټرايفاسفېټ هم توليدوي.دا تړنګنوم د [[يوناني ژبه|يوناني]] ژبې د وييکو  ''γλυκύς'' (خوږ) او ''λύσις'' (حل کېدنه) څخه جوړ شوی.
 
