*Empty MediaWiki Message*

--- a/د_سېټريک_اسيد_څرخ.mw
+++ b/د_سېټريک_اسيد_څرخ.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 [[Image:Citricacidcycle.png|thumb|left|400px|د سېټريک اسيد د څرخ پړاونه]]
 
 '''د سېټريک اسيد څرخ'''، چې د '''ټرايکاربوآکسېليک اسيد څرخ''' ('''TCA څرخ''') يا د  '''کرېبس څرخ''' په نومونو سره هم يادېږي، د کټلايز شوي [[انزايم]]ونو د [[کيميايي تعامل]]ونو يوه لړۍ ده. دا کيميايي څرخ په ټولو هغو ژونديو سلولونو کې چې د سلولي سااخيستنې په کړنه کې له [[آکسيجن]] نه کار اخلي پېښېږي. په [[ايوکاريوټ]] سلولونو کې د سېټريک اسيد څرخ د [[مايټوکونډريا]] په [[مېټرکس]] کې سرته رسي. د لومړي ځل لپاره د سېټريک اسيد څرخ د توکيو او تعاملونو موندنه د [[البېرټ شېنټ ګيورګي]] او د [[هانس آډولف کرېبز]] د څېړنو په پايله کې وموندل شول.
