*Empty MediaWiki Message*

--- a/رومانیا.mw
+++ b/رومانیا.mw
@@ -1,6 +1,4 @@
-{{sprotected}}
-{{verylong}}
-{{otheruses}}
+{{ژباړل}}
 {{Infobox_Country
 |native_name = ''România''
 |conventional_long_name = Romania
