*Empty MediaWiki Message*

--- a/ميانمار.mw
+++ b/ميانمار.mw
@@ -1,4 +1,4 @@
-{{Infobox_Country|
+{{ژباړل}}{{Infobox_Country|
 native_name = [[Image:Myanmar long form.png|175px]]<!---Unicode spelling--ပ္ရည္‌ထောင္‌စုမ္ရန္‌မာနုိင္‌ငံတော္‌---><br />''Pyi-daung-zu Myan-ma Naing-ngan-daw'' |
 conventional_long_name = Union of Myanmar |
 common_name = Myanmar |
