*Empty MediaWiki Message*

--- a/فلیپین.mw
+++ b/فلیپین.mw
@@ -1,4 +1,4 @@
-{{هېواد-مالوماتبکس
+{{ژباړل}}{{هېواد-مالوماتبکس
 |ملي نوم= ''Republika ng Pilipinas''
 |اوږداودوديز نوم      = Republic of the Philippines
 |ټولګړی نوم = فلپاين
