*Empty MediaWiki Message*

--- a/انسان_پيژندنه.mw
+++ b/انسان_پيژندنه.mw
@@ -1,4 +1,4 @@
-<font face="Tahoma">
+{{ژباړل}}
 '''وګړپوهنه''' د دوه نومونو، وګړی او پوهنې يو تړنګ نوم دی. په انګريزي ژبه انتروپولوژي (د يوناني ژبې: ἀνθρωπος، ''انتروپوس''، "وګړی يا انسان"؛ او λόγος، ''لوګوس''، "پوهه") بلل کېږي چې دا هم يو تړنګ نوم دی. وګړپوهنه د انسانانو د فيزيکي او ټولنيزو ځانګړنو يوه پرتليزه زده کړه ده چې په دې پوهنه کې د پخوانيو تاريخي مهالونو نه تر اوسه پورې د بېلابېلو جغرافيايي وېشنو، د فرهڼيز تاريخ، د اکلچرېشن او کلتوري اړيکو له مخې انسانيت ته کتل کېږي.<ref>{{cite book |last= Newman|first= Garfield, et al|authorlink= |coauthors= |title= Echoes from the past: world history to the 16th century|year= 2001|publisher= McGraw-Hill Ryerson Ltd|location= Toronto|isbn= 0-07-088739-X}}</ref> It is [[holism|holistic]] in two senses: it is concerned with all human beings across times and places, and with all dimensions of humanity (evolutionary, biophysical, sociopolitical, economic, cultural, psychological, etc.). 
 
 In principle, it is concerned with all institutions of all societies.  Since the work of [[Franz Boas]] and [[Bronislaw Malinowski]] in the late 19th- and early 20th-centuries, anthropology has been distinguished from other social science disciplines by its emphasis on [[Cultural relativism|cultural relativity]], in-depth examination of context, [[cross-cultural studies|cross-cultural comparisons]], and the importance it places on long-term, experiential immersion in the area of research, often known as [[Participant observation|participant-observation]]. Since the work of Boas in particular, many anthropologists have used their findings to frame cultural critiques. This has been particularly prominent in America, from Boas's arguments against 19th-century racial ideology, through [[Margaret Mead]]'s advocacy for gender equality and sexual liberation, to current criticisms of [[post-colonialism|post-colonial]] oppression and promotion of [[multiculturalism]]. 
