/* چاپ شوي آثار */

--- a/رحمت_شاه_سائل.mw
+++ b/رحمت_شاه_سائل.mw
@@ -10,23 +10,15 @@
 == دندې ==
 
 == چاپ شوي آثار ==
-۱- ريبار ـــ د شعرونو لومړۍ ټولګه.
-
-۲- سره بڅري ـــ د انقلابي نظمونو او شعرونو ټولګه.
-
-۳- د وير په چم کې وار د نغمو دی ـــ د شعرونو  ټولګه.
-
-۴- د لمبو سيوری ـــ د شعرونو ټولګه.
-
-۵- درد چه د څړیکو څانګې اوسپړلې  ـــ د شعرونو ټولګه.
-
-۶- آخري سندره  ـــ د لنډو کیسو ټولګه.
-
-۷- د وینو رنګ په لمبو څنګه ښکاري ـــ د شعرونو ټولګه.
-
-۸- حالات چې اور وروي ـــ د شعرونو ټولګه.
-
-۹- د ښایستونو د سپرلی بادونه ـــ د شعرونو ټولګه.
+#ريبار ـــ د شعرونو لومړۍ ټولګه.
+# سره بڅري ـــ د انقلابي نظمونو او شعرونو ټولګه.
+#د وير په چم کې وار د نغمو دی ـــ د شعرونو  ټولګه.
+# د لمبو سيوری ـــ د شعرونو ټولګه.
+#درد چه د څړیکو څانګې اوسپړلې  ـــ د شعرونو ټولګه.
+#آخري سندره  ـــ د لنډو کیسو ټولګه.
+#د وینو رنګ په لمبو څنګه ښکاري ـــ د شعرونو ټولګه.
+#حالات چې اور وروي ـــ د شعرونو ټولګه.
+#د ښایستونو د سپرلی بادونه ـــ د شعرونو ټولګه.
  
 پاتې دې نه وي چې د "سائل" صېب د لمبو سيوری ،درد چې د څړیکو څانګې اوسپړلې،آخري سندره، د وینو رنګ په لمبو څنګه ښکاري او حالات چې اور وروي زموږ په کتابتون کې شته خو د وخت له کمې څخه نه شو کولې چې د سائل صېب ټول شعرونه ان لاین کړو.
 
@@ -43,5 +35,5 @@
 وروستى چاپ شوى کتاب يي دى : ته به پخپل تصويرکې څوک ځايوې. ښاغلى سايل ټول عمر خياط (درزي ) وو خواوس هوډلري چې د پښتون په رساله کې کار وکړي . هلته به ليکنې کوي.
 
 رحمت شاه سايل لس ماشومان لري . او لا پخپل کلي کې اوسي.
-[[Category: پښتانه شاعران]]
-[[Category: پښتانه ليکوالان]]
+[[وېشنيزه: پښتانه شاعران]]
+[[وېشنيزه: پښتانه ليکوالان]]
