--- a/ډنمارک.mw
+++ b/ډنمارک.mw
@@ -242,14 +242,12 @@ Among other prominent Danes are:
 *[[Trees of Denmark]]
 *[[Reporters without borders]] Worldwide Press Freedom Index 2004: Ranked 1 out of 166 countries (in an 8-way tie)
 
-==See also==
+==دا هم وګورۍ==
 * [[Cuisine of Denmark]]
-* [[Culture of Denmark]]
-* [[List of Danish painters]]
-* [[List of Danes|List of notable Danish people]]
-* [[List of people on stamps of Denmark]]
-* [[Music of Denmark]]
-* [[Religion in Denmark]]
+* [[د ډېنمارک فرهنګ]]
+* [[د ډېنمارکي انځورګرانو لړليک]]
+* [[د ډېنمارکيانو لړليک|د ډېنمارک د نومياليو لړليک]]
+* [[ډېنمارکي موسيقي]]
 
 ==References==
 * [http://www.um.dk/Publikationer/UM/English/Denmark/index.asp In-depth description of Denmark published by the Royal Danish Ministry of Foreign Affairs]
