--- a/هندو_هېوادونه.mw
+++ b/هندو_هېوادونه.mw
@@ -1,4 +1,4 @@
-د هندو هېوادونو څخه هغه هېواونه مراد دي، چې ډېركي وګړي يې ددې [[مذهب]] لارويان وي. د هند د نيمې وچې زياتره هېوادونه د هندو مذهب لارويان دي. نن سبا د [[هندويزم]] مذهب د نړۍ درېيم [[مذهب]] ګڼل كېږي، چې د لارويانو شمېره يې نږدې يو بېليون ته رسېږي، چې له دېډلې څخه يې ۹۰۵ مېليونه په هند او نېپال كې اوسېږي. 
+{{ژباړل}}د هندو هېوادونو څخه هغه هېواونه مراد دي، چې ډېركي وګړي يې ددې [[مذهب]] لارويان وي. د هند د نيمې وچې زياتره هېوادونه د هندو مذهب لارويان دي. نن سبا د [[هندويزم]] مذهب د نړۍ درېيم [[مذهب]] ګڼل كېږي، چې د لارويانو شمېره يې نږدې يو بېليون ته رسېږي، چې له دېډلې څخه يې ۹۰۵ مېليونه په هند او نېپال كې اوسېږي. 
 نور هغه هېوادونه چې په ډېره كچه [[هندوان]] پكې اوسېږي، عبارت دي له: [[پاكستان]]، [[سريلنكا]]، [[اندونېزيا]]، [[مالېزيا]]، [[سېنګاپور]]، [[موروكو]]، [[فيجي]]، ګيانا، ترينيډېډ، او توباګو، څخه.
 ''د نړېوال مذهبي خپلواكۍ راپور 2006''[http://www.state.gov/g/drl/rls/irf/] نورې سرچينې د سي آى اې څارګريز راپور[https://www.cia.gov/library/publications/the-world-factbook/] and adherents.com.[http://www.adherents.com/Na/Na_298.html#1868] د هندوانو هېوادنۍ شمېره د سېسوس له وېبپاڼې څخه راخيستل شوېز.gov[http://www.census.gov/cgi-bin/ipc/idbrank.pl] ([[2007]] estimates).
 د هېوادونو د هندو توكم وګرشمېره د امريكا د بهرنويو چارو وزارت د سروې څخه اخيستل شوې.
