*Empty MediaWiki Message*

--- a/انځوراخيستنه.mw
+++ b/انځوراخيستنه.mw
@@ -1,4 +1,4 @@
-{{delete|not in pashto}}
+{{ژباړل}}
 
 {{Portal|Photography|Large_format_camera_lens.png}}
 '''Photography'''  {{IPA|}} [fә'tɑgrәfi:],[foʊ'tɑgrәfi:]
