*Empty MediaWiki Message*

--- a/نور_محمد_ترکی.mw
+++ b/نور_محمد_ترکی.mw
@@ -1,3 +1,4 @@
+{{ژباړل}}
 {| align="left" cellpadding="2" cellspacing="0" style="border: 1px solid; margin-left: 1em"
 |+ '''نور محمد ترکی''' 
 ! bgcolor="#efefef" colspan="2" |[[Image:Leader14.jpg|نور محمد ترکی]]
