/* تجهيز او تكفين */

--- a/محمد.mw
+++ b/محمد.mw
@@ -444,8 +444,8 @@
 دناروغۍ په نا كرارۍ كې به هم درسول الله صلى الله عليه وسلم له مباركې خولې نه داتور ي اوريدل كيدل : (مع الذين انعم الله عليهم ) او يا دا (اللهم بالرفيق الاعلى ) , تر غرمې وروسته درسول لله صلى الله عليه وسلم په مباركه سينه كې غږ پيداشو ,او پدې مهال يې شونډې ښوريدلې او داتوري ورڅخه اوريدل كيدل (الصلاة وما ملكت ايمانكم ) يعنې دلمانځه او مرييونو خيال ساتئ ,په وروستنۍ شيبه كې رسول الله صلى الله عليه وسلم لاس پورته كړ ,په ګوته يې اشاره وكړه او درې ځلې يې وويل : (بالرفيق الاعلى ,بالرفيق الاعلى ,بالرفيق الاعلى ) په همدې وينا كې يې لاسونه ځوړند شول ,سترګې يې دبام په لورې نيمكښه پاتې شوې او سپيڅلی روح يې قدسي عالم ته والوته . 
 انا لله وانا اليه راجعون . 
 
-== تجهيز او تكفين ==
-دسې شنبې ورځ د تجهيز او تكفين ورځ وه حضرت علي رضى الله عنه ,فضل بن عباس رضى الله عنه ,او حضرت اسامه بن زيد رضى الله عنه غسل وركړ ,په همدې مهال كې حضرت عباس رضى الله عنه هم حاضر وو ,او يو انصاري حضرت اوس بن خولې رضى الله عنه اوبه راوړې ,دكفن لپاره دسپڼسيو درې سپينې ټوټې غوره شوې . 
+=== تجهيز او تكفين ===
+د سې شنبې ورځ د تجهيز او تكفين ورځ وه حضرت علي رضى الله عنه ,فضل بن عباس رضى الله عنه ,او حضرت اسامه بن زيد رضى الله عنه غسل وركړ ,په همدې مهال كې حضرت عباس رضى الله عنه هم حاضر وو ,او يو انصاري حضرت اوس بن خولې رضى الله عنه اوبه راوړې ,دكفن لپاره دسپڼسيو درې سپينې ټوټې غوره شوې . 
 تر غسل او كفن وروسته دا پوښتنه راپيدا شوه چې رسول الله صلى الله عليه وسلم به په كوم ځای كې خاوروته سپارل كيږي ؟ حضرت ابو بكر صديق رضى الله عنه وويل :انبيا چې چيرې وفات شي هلته خاورو ته سپارل كيږي ,په همدې خبره اتفاق راغى او په كوم ځای كې چې رسول الله صلى الله عليه وسلم وفات شوى وو په هماغه ځای كې دقبر كنلو كار پيل شو , داځای دحضرت عايشې رضى الله عمها داوسيدلو خونه وه ,دقبر په سرهم خبره راپورته شوه ,ځكه حضرت ابو عبيده بن جراح رضى الله عه به دمكې دخلكو په څير بغلي قبرونه كيندل ,او حضرت ابو طلحه رضى الله عنه به بيا دمدينې دخلكو په دود لحدي قبرونه ايستل ,نو دا خبره كيدله چې اوس څوك او څه ډول قبر وكندي ؟ 
 حضرت عمر رضى الله وويل : په همدې دواړو اصحابو پسې څوك واستوئ ,هر يو چې لومړى راغى هغه دې دخپلې خوښې قبر وكندي ,په دواړو صحابه و پسې سړي واستول شول ,حضرت ابو عُبيده بن جراح رضى الله عنه په كور كې نه وو ,حضرت ابو طلحه رضى الله راغى او لحدي قبر يې جوړكړ , څنګه چې دقبر ځمكه نمجنه وه نو هغه بستر يې پكې وغوړاوه په كوم كې چې رسول الله صلى الله عليه وسلم وفات شوى وو . 
 كله چې جنازه تياره شوه نو خلك دلمانځه لپاره رامات شول ,خونې ته وار په وارورننوتل او لمونځونه يې كول ,دالمونځونه پرته دچا له امامت نه ترسره شول ,لومړى نارينه و بيا ښځينه و او ورپسې كوچنيانو دجنازې لمونځونه ادا كړل .درسول الله صلى الله عليه وسلم مبارك جسد حضرت علي مرتضى رضى الله عنه ,حضرت فضل بن عباس رضى الله عنه ,حضرت اسامه بن زيد رضى الله عنه ,او حضرت عبدالرحمن بن عوف رضى الله عنه قبر ته ښكته كړ . 
