--- a/محمد.mw
+++ b/محمد.mw
@@ -423,8 +423,8 @@
 درسول الله صلى الله عليه وسلم په امر يې كلاګاني محاصره شوې ,او دا محاصره تر يوې مياشتې اوږده شوه ,په پای كې يهودو وويل هره پريكړه چې سعد بن معاذ رضى الله عنه وكړي مونږ يې منو ,(هغه مهال حضرت سعد بن معاذ رضى الله عنه زخمي وو شهيد شوى لا نه وو , ) يهودو فكر كاوه چې له سعد رضى الله عنه سره د هغوی د نيكيو له امله چې ښايي په يوه مهال به يې ورسره كړې وي له كبله ممكن حضرت سعد د دوی په ګټه يوه پريكړه وكړي خو داسې ونه شول بلكه : حضرت سعد بن معاذرضى الله عنه پريكړه وكړه چې دبنو قريظه يهودو جګړه مار كسان دې ووژل شي ,ښځي او ماشومان دې بنديان او مال دې غنيمت ونيول شي . 
 داپريكړه حضرت معاذ رضى الله عنه دتورات له حكم سره سمه وكړه ,رسول الله صلى الله عليه وسلم ته به چې په هغه مهال كومه خبره ښكاره نه وه راغلې نو دتورات احكام يې عملي كول ځكه يې نو پدې پريكړې سره حضرت سعدرضى الله عنه ته وويل چې تايوه اسماني پريكړه وكړه . د بنو قريظه يهودو دا پريكړه ومنله او ځانونه يې دوژلو ځای ته حاضر كړل , ددې پريكړې په كولو سره دبنو قريظه مسأله پای ته ورسيده .
 
-== وفات ==
-==== ناروغي ====
+== مړينه ==
+=== ناروغي ===
 دڅار شنبې په ورځ چې دصفر دمياشتې اتلسمه يا نولسمه نيټه وه ,رسول الله صلى الله عليه وسلم جنت البقيع ته چې دعامومسلمانانو هديره وه ولاړ ,كله چې له هغه ځايه راستون شونو ناروغه شو,دحضرت ميمونې رضى الله عنها كره يې شپه تيره كړه ,د دوشنبې په ورځ درسول الله صلى الله عليه وسلم ناروغي زياته شوه , او دنورو بيبيانو په خوښه دحضرت عايشې رضى الله عنها كره ولاړ ,ترڅو پورې چې يې دګرځيدو ځواك درلود نو مسجد ته به يې تشريف وړلو ,وروستنى لمونځ دماښام لمونځ وو چې مسلمانانو په رسول الله صلى الله عليه وسلم پسې ادا كړ. دامهال درسول الله صلى الله عليه وسلم سر خوږيده او تړلى يې وو ,همدا شپه ماخوستن وار په وار بې هوښي ورباندې راتله ,او امر يې وكړ چې حضرت ابو بكر صديق رضى الله عنه دې لمونځ وركړي . 
 بله ورځ ماسپښين درسول لله صلى الله عليه وسلم ناروغي يوڅه كمه وه ,غسل يې وكړ ,د حضرت عباس او حضرت علي رضى الله عنهماپه اوږو باندې يې ځان تكيه كړاوجُومات ته ولاړ ,هلته دابو بكر رضى الله عنه په امامت لمونځ ولاړوو ,چې دهغه ترڅنګ كيناست او خلكو ته يې لمونځ وركړ ,وروسته يې يوه لنډه خطبه وويله ,دادرسول الله صلى الله عليه وسلم وروستۍ خطبه وه چې پكې يې وفرمايل : 
 (خدای جل جلاله يوه بنده ته واك وركړى چې ددُنياوي نعمتونو اوياهم دخدای له لورې داُخروي نعمتونو له منځ نه يوخوښ كړي. بنده هغه شيان دځان لپاره غوره كړل چې له آخرت سره اړيكې لري. 
@@ -432,7 +432,7 @@
 همداراز يې په خطبه كې دانصارو په هكله وفرمايل : (اى خلكو زه دانصارو په هكله تاسې ته وصيت كوم ,عام مسلمانان به ډيريږي خو انصاربه دومره لږ شي لكه په خوړو كې مالګه ,انصارو خپله دنده تر سره كړه ,اوس په تاسو دهغوی دپور پرې كول فرض دي ,انصار زما په وجود كي دمعدې په څير دي ,هرڅوك چې ستاسو دګټو او تاوان واكدار (خليفه) وي نو دهغه دا دنده ده چې كه هرڅوك په انصارو كې ښه وي ومني ,او كه له چا څخه كومه تيروتنه شوي وي نو هغه دې وبښي . ) 
 رسول الله صلى الله عليه وسلم ترناروغتيا يوه ورځ وړاندې حضرت اسامه رضى الله ته امر كړى وو چې دروميانو جګړې ته لاړشي ,خو دهغه له قوماندې څخه دنوموړي دځواني له كبله شكايت وكړ ,رسول الله صلى الله عليه وسلم په دې اړه پخپله خطبه كې وويل : (كه داسامه په سردارۍ تاسې نيوكه لرئ نو دده دپلار په سردارئ هم تاسې نيوكې كولې زما دې په سپيڅلي خدای لوړه وي چې اسامه د دې دندې حقدار او مستحق دى , هغه په ما ډير ګران دى ,او تر دې وروسته به هم په ما ګران وي .) رسول الله صلى الله عليه وسلم دخطبې په ترڅ كي داهم وفرمايل : (دحلال او حرام نسبت دې ماته نه كيږي ,ما هغه څه حلال كړي چې هغه خدای جل جلاله پخپل كتاب كې حلال كړي ,او ما هغه څه حرام كړي چې خدای جل جلاله حرام كړي دي). 
 رسول الله صلى الله عليه وسلم دا هم وفرمايل چې : (اى دخدای دپيغمبر لورې فاطمې ! او اى دخدای دپيغمبر عمې صفيې! دخداى او آخرت لپاره څه عمل وكړئ زه تاسې له خدای جل جلاله څخه نشم خلاصولای ). د نوموړې خطبې له ويلو وروسته رسول الله صلى الله عليه وسلم بيرته دحضرت عايشې رضى الله عنها كورته تشريف يووړ , دناروغتيا په نا كرارۍ كې نبوي ذات ته ورپه يادشول چې څه اشرفۍ يې له بي بي عايشې سره ايښې وې هغه يې راوبلله اوورته ويې فرمايل : (عايشې! هغه اشرفۍ چيرې دي ؟ محمد(صلى الله عليه وسلم ) به له خدايه جل جلاله سره پداسې حال كې وويني چې دی په هغه بد ګمانه وي , لاړه شه او هغه دخدای جل جلاله په لاره كې خيرات كړه . ) 
-ددوشنبې په سهار چې درسول الله صلى اله عليه وسلم دناروغتيا ديارلسمه شپه وه چې رسول لله صلى الله عليه وسلم دخپل كور له وره (دروازې) نه پرده پورته كړه ,ويې ليدل چې خلك په لمانځه ولاړدي ,ډير خوښ اوموسكى شو ,حضرت ابوبكر صديق رضى الله عنه فكر وكړ چې رسول الله صلى اله عليه وسلم لمانځه ادا كولو ته راځي ځكه يې نووغوښتل چې شاته شي ,خو رسول الله صلى الله عليه وسلم په اشاره پوه كړ چې لمونځ وركړي ,رسول الله صلى الله عليه وسلم بيرته حجرې ته ننوت ,دا هغه وروستنۍ ليدنه وه چې صحابۀ كرامو له نبوي سپيڅلي څيرې نه وكړه . 
+ددوشنبې په سهار چې درسول الله صلى اله عليه وسلم دناروغتيا ديارلسمه شپه وه چې رسول لله صلى الله عليه وسلم دخپل كور له وره (دروازې) نه پرده پورته كړه ,ويې ليدل چې خلك په لمانځه ولاړدي ,ډير خوښ اوموسكى شو ,حضرت ابوبكر صديق رضى الله عنه فكر وكړ چې رسول الله صلى اله عليه وسلم لمانځه ادا كولو ته راځي ځكه يې نووغوښتل چې شاته شي ,خو رسول الله صلى الله عليه وسلم په اشاره پوه كړ چې لمونځ وركړي ,رسول الله صلى الله عليه وسلم بيرته حجرې ته ننوت ,دا هغه وروستنۍ ليدنه وه چې صحابۀ كرامو له نبوي سپيڅلي څيرې نه وكړه .
 
 == دوفات كال  ==
 رسول الله صلى الله عليه وسلم به هر كال دروژې په مياشت كې لس ورځې په اعتكاف كي تيرولې ,خو په ورستنۍ روژه كې شل ورځې په اعتكاف كې كيناست ,رسول الله صلى الله عليه وسلم به هر كال دروژې په مياشت كې يوځل دحضرت جبرايل عليه السلام له خولې نه قرآنكريم اوريده ,خو د ورستني كال په روژه كې يې دوه ځلې واوريده . 
